2) Reproduce the Server architecture 3) Adjust the build.gradle files 4) Sort out the imports and any remaining bugs 5) Adjust CI/CD 6) Adjust the README